# Gerrit_NuMicro

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  GerritPushReview.sh  M5531BSP_Product_SBOM_cdx.json  M5531BSP_SBOM_Manifest.json  M5531BSP_TestSample_SBOM_cdx.json  M55M1BSP_Product_SBOM_cdx.json  M55M1BSP_SBOM_Manifest.json  M55M1BSP_TestSample_SBOM_cdx.json  NOTICE  NOTICE.txt  README.md  auto_clear_all_record.sh  auto_clear_record.sh  auto_generate_readme_md.sh  auto_github_action.sh  auto_update_secret_email.sh  bsp_departments.json  code-analysis-summary-MS40_M2L31.html  code-analysis-summary-MS70_M251.html  code-analysis-summary-MS70_M55M1.html  config.sh  dept_bsp.json  index.html  list_dept.sh  m2354bsp_Product_SBOM_cdx.json  m2354bsp_SBOM_Manifest.json  m2354bsp_TestSample_SBOM_cdx.json  m2l31bsp_Product_SBOM_cdx.json  m2l31bsp_SBOM_Manifest.json  m2l31bsp_TestSample_SBOM_cdx.json  m460bsp_Product_SBOM_cdx.json  m460bsp_SBOM_Manifest.json  m460bsp_TestSample_SBOM_cdx.json  vcpkg-configuration.json
SampleCode/NuMaker-M3334KIv2/: CMakeLists.txt
SampleCode/NuMaker-M3334KIv2/Blinky/: main.c  partition_m3331.h
SampleCode/NuMaker-M3334KIv2/Blinky/IAR/: Blinky.ewp
SampleCode/NuMaker-M3334KIv2/Blinky/Keil/: Blinky.uvoptx  Blinky.uvprojx  Nu_Link_Driver.ini
SampleCode/NuMaker-M3334KIv2/Blinky/VSCode/: Blinky.cproject.yml  Blinky.csolution.yml
SampleCode/NuMaker-M3334KIv2/LVGL_WidgetsDemo/: CMakeLists.txt  FreeRTOSConfig.h  README.md  lv_conf.h  main.c  task_lv.c
SampleCode/NuMaker-M3334KIv2/LVGL_WidgetsDemo/Keil/: LVGL_WidgetsDemo.uvoptx  LVGL_WidgetsDemo.uvprojx  Nu_Link_Driver.ini
SampleCode/NuMaker-M3334KIv2/LVGL_WidgetsDemo/VSCode/: LVGL_WidgetsDemo.cproject.yml  LVGL_WidgetsDemo.csolution.yml
SampleCode/NuMaker-M3334KIv2/LVGL_WidgetsDemo/common/: lv_demo.c  lv_example_entry.c  lv_port_disp.c  lv_port_indev.c  nu_misc.c
SampleCode/NuMaker-M3334KIv2/LVGL_WidgetsDemo/lv_port/: drv_pdma.c  drv_pdma.h  drv_spi.c  drv_spi.h  lv_glue.c  lv_glue.h
SampleCode/NuMaker-M3334KIv2/MP3_Player/: config.h  isr.c  main.c  mp3.c  sdglue.c
SampleCode/NuMaker-M3334KIv2/MP3_Player/IAR/: MP3_Player.ewp
SampleCode/NuMaker-M3334KIv2/MP3_Player/Keil/: MP3_Player.uvprojx  Nu_Link_Driver.ini
SampleCode/NuMaker-M3334KIv2/MP3_Player/VSCode/: MP3_Player.cproject.yml  MP3_Player.csolution.yml
SampleCode/NuMaker-M3334KIv2/NuvotonAudioGUI_Firmware/: CMakeLists.txt  main.c
SampleCode/NuMaker-M3334KIv2/NuvotonAudioGUI_Firmware/Keil/: Codec_ControlBoard.uvoptx  Codec_ControlBoard.uvprojx  Nu_Link_Driver.ini
SampleCode/NuMaker-M3334KIv2/NuvotonAudioGUI_Firmware/VSCode/: Codec_ControlBoard.cproject.yml  Codec_ControlBoard.csolution.yml
SampleCode/NuMaker-M3334KIv2/NuvotonAudioGUI_Firmware/src/: adc_converter.h  audio_class.h  codec_config.c  descriptors.c  i2c_process.h  usbd_audio.c  user_config.c  user_config.h
SampleCode/NuMaker-M3334KIv2/emWin_GIFDecoder/: CMakeLists.txt  main.c
SampleCode/NuMaker-M3334KIv2/emWin_GIFDecoder/Application/: DecodeGIF.c  Nuvoton_MCU.c  conv.bat  gif2c.py  nuvoton.c  testGIF.c  testGIF1.c
SampleCode/NuMaker-M3334KIv2/emWin_GIFDecoder/Keil/: Nu_Link_Driver.ini  emWin_SimpleDemo.uvoptx  emWin_SimpleDemo.uvprojx
SampleCode/NuMaker-M3334KIv2/emWin_GIFDecoder/VSCode/: Nu_Link_Driver.ini  emWin_SimpleDemo.cproject.yml  emWin_SimpleDemo.csolution.yml
SampleCode/StdDriver/FMC_FwUpdateApplication/: CMakeLists.txt  FMC_FwUpdateApplication.uvmpw
SampleCode/StdDriver/FMC_FwUpdateApplication/App/: main.c
SampleCode/StdDriver/FMC_FwUpdateApplication/BackupApp/: main.c
SampleCode/StdDriver/FMC_FwUpdateApplication/Loader/: main.c
SampleCode/StdDriver/HSOTG_Dual_Role_UMAS/: CMakeLists.txt  descriptors.c  main.c  massstorage.c  massstorage.h  swotg.c  swotg.h
SampleCode/StdDriver/HSOTG_Dual_Role_UMAS/GCC/: .cproject  .project
SampleCode/StdDriver/HSOTG_Dual_Role_UMAS/IAR/: HSOTG_Dual_Role_UMAS.ewp
SampleCode/StdDriver/HSOTG_Dual_Role_UMAS/KEIL/: HSOTG_Dual_Role_UMAS.uvprojx
SampleCode/StdDriver/HSOTG_Dual_Role_UMAS/Keil/: HSOTG_Dual_Role_UMAS.uvoptx  HSOTG_Dual_Role_UMAS.uvprojx  Nu_Link_Driver.ini
SampleCode/StdDriver/HSOTG_Dual_Role_UMAS/VSCode/: HSOTG_Dual_Role_UMAS.cproject.yml  HSOTG_Dual_Role_UMAS.csolution.yml
SampleCode/StdDriver/HSOTG_HNP/: CMakeLists.txt  descriptors.c  hid_mouse.c  main.c
SampleCode/StdDriver/HSOTG_HNP/GCC/: .cproject  .project
SampleCode/StdDriver/HSOTG_HNP/IAR/: HSOTG_HNP.ewp
SampleCode/StdDriver/HSOTG_HNP/KEIL/: HSOTG_HNP.uvprojx
SampleCode/StdDriver/HSOTG_HNP/Keil/: HSOTG_HNP.uvoptx  HSOTG_HNP.uvprojx
SampleCode/StdDriver/HSOTG_HNP/VSCode/: HSOTG_HNP.cproject.yml  HSOTG_HNP.csolution.yml
SampleCode/StdDriver/HSUSBH_USBH_Firmware_Update/: CMakeLists.txt  main.c  usbh_update.c
SampleCode/StdDriver/HSUSBH_USBH_Firmware_Update/IAR/: HSUSBH_USBH_Firmware_Update.ewd  HSUSBH_USBH_Firmware_Update.ewp  HSUSBH_USBH_Firmware_Update.icf
SampleCode/StdDriver/HSUSBH_USBH_Firmware_Update/Keil/: HSUSBH_USBH_Firmware_Update.uvoptx  HSUSBH_USBH_Firmware_Update.uvprojx  Nu_Link_Driver.ini  usbh_firmware_update.sct
SampleCode/StdDriver/HSUSBH_USBH_Firmware_Update/VSCode/: HSUSBH_USBH_Fw_Update.cproject.yml  HSUSBH_USBH_Fw_Update.csolution.yml  usbh_firmware_update.sct
SampleCode/StdDriver/HSUSBH_USBH_HID_Mouse_Keyboard/: CMakeLists.txt  keycode_xlate.c  main.c
SampleCode/StdDriver/HSUSBH_USBH_HID_Mouse_Keyboard/IAR/: HSUSBH_USBH_HID_Mouse_Keyboard.ewp
SampleCode/StdDriver/HSUSBH_USBH_HID_Mouse_Keyboard/Keil/: HSUSBH_USBH_HID_Mouse_Keyboard.uvoptx  HSUSBH_USBH_HID_Mouse_Keyboard.uvprojx
SampleCode/StdDriver/HSUSBH_USBH_HID_Mouse_Keyboard/VSCode/: HSUSBH_USBH_HID_Mouse_Keyboard.cproject.yml  HSUSBH_USBH_HID_Mouse_Keyboard.csolution.yml
SampleCode/StdDriver/HSUSBH_USBH_MassStorage/: CMakeLists.txt  main.c
SampleCode/StdDriver/HSUSBH_USBH_MassStorage/GCC/: .cproject  .project
SampleCode/StdDriver/HSUSBH_USBH_UAC_LoopBack/: CMakeLists.txt  main.c  uac_loopback.c
SampleCode/StdDriver/HSUSBH_USBH_VENDOR_LBK/: CMakeLists.txt  lbk_driver.c  lbk_driver.h  main.c
(+11279 files in other folders)
